--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "next": "10.0.6",
     "react": "17.0.1",
@@ -15,6 +16,7 @@
     "react-hook-form": "^6.15.1",
     "react-icons": "^4.2.0",
     "sass": "^1.32.6",
-    "strftime": "^0.10.0"
+    "strftime": "^0.10.0",
+    "sweetalert2": "^10.15.5"
   }
 }
