--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
     "sass": "^1.32.6",
     "strftime": "^0.10.0",
     "sweetalert2": "^10.15.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "prettier": "^2.2.1"
   }
 }
