chore: 🚚 Rename .eslintrc.json to .eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,14 @@
         "react/prop-types": "off",
         "no-var": "error",
         "prefer-const": "error",
-        "newline-before-return": "error"
+        "newline-before-return": "error",
+        "padding-line-between-statements": [
+            "error",
+            {
+                "blankLine": "always",
+                "prev": "if",
+                "next": "return"
+            }
+        ]
     }
 }
