--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.2.0",
     "sass": "^1.32.6",
     "strftime": "^0.10.0",
-    "sweetalert2": "^10.15.5"
+    "sweetalert2": "^10.15.5",
+    "swiper": "^6.5.9"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.20.0",
