refactor(imports): use @ as root path

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
-    "baseUrl": "."
-  }
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
