--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "js-cookie": "^2.2.1",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
