--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.13",
+    "@chakra-ui/react": "^1.6.4",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "framer-motion": "^4.1.17",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
