--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
+    "@chakra-ui/modal": "^1.8.9",
     "@chakra-ui/react": "^1.6.4",
     "@ckeditor/ckeditor5-build-classic": "^28.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
