--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "singleQuote": true,
   "tabWidth": 2,
   "useTabs": false,
-  "printWidth": 90,
-  "semi": false
+  "printWidth": 100,
+  "semi": true,
+  "arrowParens": "avoid"
 }
