--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.14.8",
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.4",
     "@ckeditor/ckeditor5-build-classic": "^28.0.0",
@@ -17,6 +19,8 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.21.1",
+    "babel": "^6.23.0",
+    "babel-jest": "^27.0.6",
     "classnames": "^2.2.6",
     "framer-motion": "^4.1.17",
     "next": "10.0.6",
@@ -36,6 +40,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
+    "jest": "^27.0.6",
     "prettier": "^2.2.1"
   }
 }
