--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "env": {
     "browser": true,
     "es2021": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "extends": [
     "eslint:recommended",
@@ -32,7 +33,6 @@
     "react/prop-types": "off",
     "no-var": "error",
     "prefer-const": "error",
-    "newline-before-return": "error",
     "padding-line-between-statements": [
       "error",
       {
