--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "plugin:react/recommended",
     "prettier"
   ],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
