--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,43 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [develop]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout repo 📥
+        uses: actions/checkout@v3
+
+      - name: Set up Node 🛠
+        uses: actions/setup-node@v3
+
+      - name: Install dependencies 📥
+        run: yarn install
+
+      - name: Run tests 🧪
+        run: yarn test
+
+  release:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout repo 📥
+        uses: actions/checkout@v3
+
+      - name: Set up Node 🛠
+        uses: actions/setup-node@v3
+
+      - name: Semantic Release 🔥
+        uses: cycjimmy/semantic-release-action@v3
         with:
-          node-version: 15
-      - run: yarn install
-      - run: yarn test
+          extra_plugins: |
+            @semantic-release/commit-analyzer
+            @semantic-release/release-notes-generator
+            @semantic-release/git
+            @semantic-release/github
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
